# guile-logging

./: configure.ac
src/: Makefile.am  logging.nw
support/noweb/: boiler-plate.nw
support/pkg-config/: Makefile.am  guile-logging.pc.in
